# NIfTI-Volume-Loader

./: BUILD.md  CMakeLists.txt  README.md
src/: FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  VolumeRenderer.cpp  VolumeRenderer.h  main.cpp
